@@ -16,6 +16,9 @@ HOST_CPPFLAGS := $(shell dpkg-buildflags --get CPPFLAGS)
 HOST_CFLAGS := -Wall -Wno-error=unused-result $(shell dpkg-buildflags --get CFLAGS | perl -pe 's/-O3\b/-O2/')
 HOST_LDFLAGS := $(shell dpkg-buildflags --get LDFLAGS)
 
+# to get new minilzo, with CVE fixes, patched to build with our compiler
+BUILT_USING=$(shell dpkg-query -f '$${source:Package} (= $${source:Version}), \n' -W liblzo2-dev)
+
 export DEB_HOST_ARCH
 export HOST_CPPFLAGS
 export HOST_CFLAGS
@@ -175,6 +178,7 @@ override_dh_autoreconf:
 		patch -d po -p3 \
 		< "debian/gettext-patches/$$patchname.patch"; \
 	done
+	cp /usr/share/lzo/minilzo/*.c /usr/share/lzo/minilzo/*.h grub-core/lib/minilzo/
 
 debian/stamps/configure-grub-common: debian/stamps/configure-grub-$(COMMON_PLATFORM)
 	touch $@
@@ -562,7 +566,7 @@ LEGACY_DOC_BR := grub-doc (<< 0.97-32), grub-legacy-doc (<< 0.97-59)
 endif
 
 override_dh_gencontrol:
-	dh_gencontrol -- -Vlegacy-doc-br="$(LEGACY_DOC_BR)" -V"efi:Vendor=$(SB_EFI_VENDOR)" $(substvars)
+	dh_gencontrol -- -Vlegacy-doc-br="$(LEGACY_DOC_BR)" -V"efi:Vendor=$(SB_EFI_VENDOR)" -VBuilt-Using="$(BUILT_USING)" $(substvars)
 
 TARNAME := grub2_$(deb_version)_$(DEB_HOST_ARCH).tar.gz
 
@@ -582,7 +586,7 @@ endif
 endif
 
 override_dh_auto_clean:
-	-rm -rf debian/grub-extras-enabled debian/stamps obj
+	-rm -rf debian/grub-extras-enabled debian/stamps obj grub-core/lib/minilzo/*.c grub-core/lib/minilzo/*.h
 	-rm -f contrib grub-core/contrib
 
 override_dh_clean:
